<resources>
    <string name="app_name">My Inventory</string>

    <!-- Title for the Inventory activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Title for the menu about button [CHAR LIMIT=20] -->
    <string name="about">About</string>
    <!-- The About AlerDialog content of strings -->
    <string name="back">Back</string>
    <string name="more">More</string>
    <string name="this_app_was">This App was created by\nWISEMO\nOne of the Google | Udacity Developer scholarship winners\n2017&#8211;2018</string>
    <string name="google_udacity_logos" translatable="false">google_udacity_logos</string>

    <!-- Label for editor menu option to save product [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>


    <!-- Label for product category type information in the editor [CHAR LIMIT=30] -->
    <string name="product_item_category">Category</string>

    <!-- Label for overview product item of attributes in the editor [CHAR LIMIT=30] -->
    <string name="product_item_overview">Overview</string>

    <!-- Label for in-stock information in the editor [CHAR LIMIT=30] -->
    <string name="product_item_in_stock">In Stock</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="product_item_price">Price</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="product_item_quantity">Quantity</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="product_item_supplier">Supplier</string>

    <!-- Text hint for product name_tv field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_item_name">Product Name</string>

    <!-- Text hint for description field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_item_description">Description</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_item_price">Price</string>

    <!-- Currency for price of the product item (Egyptian Pounds) [CHAR LIMIT=5] -->
    <string name="price_currency">EGP</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_item_quantity">Quantity</string>

    <!-- Text hint for supplier name_tv field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_item_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_item_supplier_phone_number">Phone Number</string>



    <!-- Availability status for the product item (Yes OR No) [CHAR LIMIT=5] -->
    <string name="item_in_stock">YES</string>
    <string name="item_out_stock">NO</string>



    <!-- Label for dropdown menu option if the item type is Casual [CHAR LIMIT=20] -->
    <string name="type_casual">Casual</string>

    <!-- Label for dropdown menu option if the item type is Life Style [CHAR LIMIT=20] -->
    <string name="type_life_style">Life Style</string>

    <!-- Label for dropdown menu option if the item type is Formal [CHAR LIMIT=20] -->
    <string name="type_formal">Formal</string>

    <!-- Label for dropdown menu option if the item type is Cotton Socks [CHAR LIMIT=20] -->
    <string name="type_cotton_socks">Cotton Socks</string>

    <!-- Label for dropdown menu option if the item type is Care Products [CHAR LIMIT=20] -->
    <string name="type_care_products">Care Products</string>

    <!-- Label for dropdown menu option if the item type is Belts and Wallets [CHAR LIMIT=20] -->
    <string name="type_belts_and_wallets">Belts and Wallets</string>



    <!-- Label for dropdown menu option if the supplier is the Main one [CHAR LIMIT=20] -->
    <string name="supplier_main">Main Supplier</string>

    <!-- Label for dropdown menu option if the supplier is Number One [CHAR LIMIT=20] -->
    <string name="supplier_number_one">Supplier Number One</string>

    <!-- Label for dropdown menu option if the supplier is Number Two [CHAR LIMIT=20] -->
    <string name="supplier_number_two">Supplier Number Two</string>

    <!-- Label for dropdown menu option if the supplier is Number Three [CHAR LIMIT=20] -->
    <string name="supplier_number_three">Supplier Number Three</string>



    <!-- Phone numbers of the suppliers [CHAR LIMIT=20] -->
    <string name="phone_supplier_main">01008887112</string>
    <string name="phone_supplier_number_one">01004764654</string>
    <string name="phone_supplier_number_two">010001401404</string>
    <string name="phone_supplier_number_three">01144202325</string>

    <string name="editor_insert_item_failed">Error with saving item</string>
    <string name="editor_insert_item_successful">data saved successfully</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Your inventory is empty now!</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>


    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <string name="delete">Delete</string>



    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>


    <!-- Label for overflow menu option that deletes all items data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Label for the item's description if the description is empty [CHAR LIMIT=20] -->
    <string name="no_description">No description</string>
    <string name="image_thumbnail">image thumbnail</string>
    <string name="dummy_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia at arcu quis semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec fermentum elit augue.</string>
    <string name="sale">SALE</string>
    <string name="edit">Edit</string>
    <string name="name">Name:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="description">Description</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="quantity_update">Quantity updated</string>
    <string name="type">Type</string>
    <string name="item_image">Item Image</string>

</resources>
